# rusty_jays

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/discord_presence/: mod.rs  presence.rs
src/song_fetcher/: automation.rs  fetcher.rs  mod.rs  scraper.rs
