[package]
name = "RustyJPlayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http client for webscraping
reqwest = "0.11.22"

# html parsing library for scraping
scraper = "0.17.1"

# selenium webdriver for Rust
thirtyfour = "0.31.0"

# discord rich presence client
discord-rpc-client = "0.3.0"

# for asynchronous programming
tokio = "1.33.0"

# for JSON serialisation/deserilisation
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

# for threading
rayon = "1.8.0"