[package]
name = "rusty_jays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http client for webscraping
reqwest = { version = "0.11.22", features = ["json", "tokio-native-tls"] }

# discord rich presence client
discord-rpc-client = "0.3.0"

# for asynchronous programming
tokio = { version = "1.33.0", features = ["full"] }

# for JSON serialisation/deserilisation
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

# for threading
rayon = "1.8.0"

# super sekrit, no cred leaks pls
dotenv = "0.15.0"
